--- a/annotated.html
+++ b/annotated.html
@@ -56,25 +56,24 @@
           <li>class <a href="classArclightShotExplosion.html" class="m-doc">ArclightShotExplosion</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classArclightUnit.html" class="m-doc">ArclightUnit</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classArclightWeapon.html" class="m-doc">ArclightWeapon</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classBoard.html" class="m-doc">Board</a> <span class="m-doc"><span></span></span></li>
+          <li>class <a href="classBoard.html" class="m-doc">Board</a> <span class="m-doc">The class representing the game board.</span></li>
           <li>class <a href="classCrawler.html" class="m-doc">Crawler</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classCrawlerUnit.html" class="m-doc">CrawlerUnit</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classCrawlerWeapon.html" class="m-doc">CrawlerWeapon</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classExplosionWeapon.html" class="m-doc">ExplosionWeapon</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classGui.html" class="m-doc">Gui</a> <span class="m-doc"><span></span></span></li>
+          <li>class <a href="classExplosionWeapon.html" class="m-doc">ExplosionWeapon</a> <span class="m-doc">Explosion/Impact/Suicide weapon.</span></li>
+          <li>class <a href="classGui.html" class="m-doc">Gui</a> <span class="m-doc">Visual Interface.</span></li>
           <li>class <a href="classItem.html" class="m-doc">Item</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classLaserWeapon.html" class="m-doc">LaserWeapon</a> <span class="m-doc"><span></span></span></li>
-          <li>struct <a href="structlibrary.html" class="m-doc">library</a> <span class="m-doc">The core implementation of the executable.</span></li>
-          <li>class <a href="classMech.html" class="m-doc">Mech</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a> <span class="m-doc"><span></span></span></li>
+          <li>class <a href="classLaserWeapon.html" class="m-doc">LaserWeapon</a> <span class="m-doc">Direct growing damage weapon.</span></li>
+          <li>class <a href="classMech.html" class="m-doc">Mech</a> <span class="m-doc">The core class representing each moving entity in the game.</span></li>
+          <li>class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a> <span class="m-doc">Close range weapon.</span></li>
           <li>class <a href="classMeltingPoint.html" class="m-doc">MeltingPoint</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPointLaser.html" class="m-doc">MeltingPointLaser</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPointSpawnerWeapon.html" class="m-doc">MeltingPointSpawnerWeapon</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMeltingPointUnit.html" class="m-doc">MeltingPointUnit</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMyTimer.html" class="m-doc">MyTimer</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classUnit.html" class="m-doc">Unit</a> <span class="m-doc"><span></span></span></li>
-          <li>class <a href="classWeapon.html" class="m-doc">Weapon</a> <span class="m-doc"><span></span></span></li>
+          <li>class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a> <span class="m-doc">Cannon/Spawner weapon.</span></li>
+          <li>class <a href="classUnit.html" class="m-doc">Unit</a> <span class="m-doc">The standart groups of Mechs.</span></li>
+          <li>class <a href="classWeapon.html" class="m-doc">Weapon</a> <span class="m-doc">Represents each attacking entity in the game.</span></li>
         </ul>
         <script>
         function toggle(e) {
