--- a/classArclight.html
+++ b/classArclight.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classMech.html" class="m-doc">Mech</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>The core class representing each moving entity in the game.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
