--- a/classBoard.html
+++ b/classBoard.html
@@ -52,7 +52,7 @@
           Board <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="board_8h.html">&lt;board.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>The class representing the game board.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -66,6 +66,7 @@
             </li>
           </ul>
         </div>
+<p>It contains all the Mechs and Units in the game. In the future, it will also manige ground effects like fire or oil.</p>
         <section id="typeless-methods">
           <h2><a href="#typeless-methods">Constructors, destructors, conversion operators</a></h2>
           <dl class="m-doc">
