--- a/classCrawlerWeapon.html
+++ b/classCrawlerWeapon.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Close range weapon.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
