--- a/classGui.html
+++ b/classGui.html
@@ -52,7 +52,7 @@
           Gui <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="gui_8h.html">&lt;gui.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Visual Interface.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -67,6 +67,7 @@
             </li>
           </ul>
         </div>
+<p>Shows the game board and all the Mechs on it. Maybe some Buttons and Labels in the future.</p>
         <section id="pub-static-methods">
           <h2><a href="#pub-static-methods">Public static functions</a></h2>
           <dl class="m-doc">
