--- a/classMech.html
+++ b/classMech.html
@@ -52,7 +52,7 @@
           Mech <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="mech_8h.html">&lt;mech.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>The core class representing each moving entity in the game.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -67,6 +67,7 @@
             </li>
           </ul>
         </div>
+<p>Each moving entity in the game is a <a href="classMech.html" class="m-doc">Mech</a>. Crawlers, MeltingPoints, and Arclights are all subclasses of <a href="classMech.html" class="m-doc">Mech</a>. Same goes for all rockets and bullets. Mainly Mechs can 1) move, 2) be attacked, 3) carry Weapons. (While Weapons do the actual attacking.)</p>
         <section id="derived-classes">
           <h2><a href="#derived-classes">Derived classes</a></h2>
           <dl class="m-doc">
