--- a/classMeleeWeapon.html
+++ b/classMeleeWeapon.html
@@ -52,7 +52,7 @@
           MeleeWeapon <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="weapon_8h.html">&lt;weapon.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Close range weapon.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -68,13 +68,14 @@
             </li>
           </ul>
         </div>
+<p>Inherits from <a href="classWeapon.html" class="m-doc">Weapon</a>. Attacks do direct damage to the target <a href="classMech.html" class="m-doc">Mech</a>. Meant for Crawlers, Rhinos and Worms.</p>
         <section id="base-classes">
           <h2><a href="#base-classes">Base classes</a></h2>
           <dl class="m-doc">
             <dt>
               class <a href="classWeapon.html" class="m-doc">Weapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Represents each attacking entity in the game.</dd>
           </dl>
         </section>
         <section id="derived-classes">
