--- a/classMeltingPointLaser.html
+++ b/classMeltingPointLaser.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classLaserWeapon.html" class="m-doc">LaserWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Direct growing damage weapon.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
