--- a/classWeapon.html
+++ b/classWeapon.html
@@ -52,7 +52,7 @@
           Weapon <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="weapon_8h.html">&lt;weapon.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Represents each attacking entity in the game.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -67,25 +67,26 @@
             </li>
           </ul>
         </div>
+<p>Each <a href="classMech.html" class="m-doc">Mech</a> has a list of Weapons, while Weapons do the actual attacking (of other Mechs). This can be done by 1) Laser, 2) Melee, 3) Spawner, or 4) Explosion Weapons; which are all subclasses of <a href="classWeapon.html" class="m-doc">Weapon</a>.</p>
         <section id="derived-classes">
           <h2><a href="#derived-classes">Derived classes</a></h2>
           <dl class="m-doc">
             <dt>
               class <a href="classExplosionWeapon.html" class="m-doc">ExplosionWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Explosion/Impact/Suicide weapon.</dd>
             <dt>
               class <a href="classLaserWeapon.html" class="m-doc">LaserWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Direct growing damage weapon.</dd>
             <dt>
               class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Close range weapon.</dd>
             <dt>
               class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Cannon/Spawner weapon.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
