--- a/gui_8h.html
+++ b/gui_8h.html
@@ -69,7 +69,7 @@
             <dt>
               class <a href="classGui.html" class="m-doc">Gui</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Visual Interface.</dd>
           </dl>
         </section>
       </div>
