--- a/weapon_8h.html
+++ b/weapon_8h.html
@@ -69,23 +69,23 @@
             <dt>
               class <a href="classWeapon.html" class="m-doc">Weapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Represents each attacking entity in the game.</dd>
             <dt>
               class <a href="classLaserWeapon.html" class="m-doc">LaserWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Direct growing damage weapon.</dd>
             <dt>
               class <a href="classMeleeWeapon.html" class="m-doc">MeleeWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Close range weapon.</dd>
             <dt>
               class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Cannon/Spawner weapon.</dd>
             <dt>
               class <a href="classExplosionWeapon.html" class="m-doc">ExplosionWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Explosion/Impact/Suicide weapon.</dd>
           </dl>
         </section>
       </div>
