--- a/board_8h.html
+++ b/board_8h.html
@@ -69,7 +69,7 @@
             <dt>
               class <a href="classBoard.html" class="m-doc">Board</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>The class representing the game board.</dd>
           </dl>
         </section>
       </div>
