--- a/classArclightShotExplosion.html
+++ b/classArclightShotExplosion.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classExplosionWeapon.html" class="m-doc">ExplosionWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Explosion/Impact/Suicide weapon.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
