--- a/classExplosionWeapon.html
+++ b/classExplosionWeapon.html
@@ -52,7 +52,7 @@
           ExplosionWeapon <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="weapon_8h.html">&lt;weapon.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>Explosion/Impact/Suicide weapon.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -67,13 +67,14 @@
             </li>
           </ul>
         </div>
+<p>Inherits from <a href="classWeapon.html" class="m-doc">Weapon</a>. Meant for everthing exploding like rockets, Rhinos or Arclight-bullets.</p>
         <section id="base-classes">
           <h2><a href="#base-classes">Base classes</a></h2>
           <dl class="m-doc">
             <dt>
               class <a href="classWeapon.html" class="m-doc">Weapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Represents each attacking entity in the game.</dd>
           </dl>
         </section>
         <section id="derived-classes">
