--- a/classMeltingPointSpawnerWeapon.html
+++ b/classMeltingPointSpawnerWeapon.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>Cannon/Spawner weapon.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
