--- a/classUnit.html
+++ b/classUnit.html
@@ -52,7 +52,7 @@
           Unit <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="unit_8h.html">&lt;unit.h&gt;</a></div>
         </h1>
-        <p><span></span></p>
+        <p>The standart groups of Mechs.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
@@ -67,6 +67,7 @@
             </li>
           </ul>
         </div>
+<p>Manage the spawning of Mechs, their Items, and their experience.</p>
         <section id="derived-classes">
           <h2><a href="#derived-classes">Derived classes</a></h2>
           <dl class="m-doc">
