--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>ebm</title>
+  <title>ebm &lt;img src=&quot;https://img.shields.io/badge/status-work%20in%20progress-orange&quot; alt=&quot;Work in Progress&quot;/&gt; | ebm</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,600i%7CSource+Code+Pro:400,400i,600" />
   <link rel="stylesheet" href="m-dark+documentation.compiled.css" />
   <link rel="icon" href="favicon-dark.png" type="image/png" />
@@ -49,9 +49,9 @@
     <div class="m-row">
       <div class="m-col-l-10 m-push-l-1">
         <h1>
-          ebm
+          ebm &lt;img src=&quot;https://img.shields.io/badge/status-work%20in%20progress-orange&quot; alt=&quot;Work in Progress&quot;/&gt;
         </h1>
-<p><a name="md_README"></a> This is the ebm project.</p><p>current state:</p><img class="m-image" src="https://github.com/mathiasKorte/ebm/blob/master/show.gif" alt="Image" /><section id="autotoc_md1"><h2><a href="#autotoc_md1">Building and installing</a></h2><p>See the BUILDING document.</p></section><section id="autotoc_md2"><h2><a href="#autotoc_md2">Contributing</a></h2><p>See the CONTRIBUTING document.</p></section><section id="autotoc_md3"><h2><a href="#autotoc_md3">Licensing</a></h2></section>
+<p><a name="md_README"></a> Explorator Belli Mechani (ebm) is a Monte-Carlo-based engine/simulator/analyzer for the game &#x27;Mechabellum&#x27; by game-river / paradox.</p><section id="autotoc_md1"><h3><a href="#autotoc_md1">Plan</a></h3><table class="m-table"><thead><tr><th>Done</th><th>Task</th></tr></thead><tbody><tr><td><img class="m-image" src="https://img.shields.io/badge/yes-green?style=flat-square" alt="Image" /></td><td>Build basic game mechanics</td></tr><tr><td><img class="m-image" src="https://img.shields.io/badge/wip-yellow?style=flat-square" alt="Image" /></td><td>Reproduce the core game</td></tr><tr><td><img class="m-image" src="https://img.shields.io/badge/n_o-red?style=flat-square" alt="Image" /></td><td>Explore best moves by trying all/many possiblities</td></tr><tr><td><img class="m-image" src="https://img.shields.io/badge/n_o-red?style=flat-square" alt="Image" /></td><td>Add mutli-processing, possibly on GPU using CUDA</td></tr><tr><td><img class="m-image" src="https://img.shields.io/badge/n_o-red?style=flat-square" alt="Image" /></td><td>Reinforcement Learning</td></tr></tbody></table></section><section id="autotoc_md2"><h3><a href="#autotoc_md2">Current State</a></h3><img class="m-image" src="https://github.com/mathiasKorte/ebm/blob/master/show.gif" alt="Image" /></section><section id="autotoc_md3"><h3><a href="#autotoc_md3">Documentation</a></h3><p>See <a href="https://mathiaskorte.github.io/ebm/annotated.html">here</a>.</p></section><section id="autotoc_md4"><h3><a href="#autotoc_md4">Building and installing</a></h3><p>See the BUILDING document.</p></section><section id="autotoc_md5"><h3><a href="#autotoc_md5">Contributing</a></h3><p>See the CONTRIBUTING document.</p></section>
       </div>
     </div>
   </div>
