--- a/mech_8h.html
+++ b/mech_8h.html
@@ -69,7 +69,7 @@
             <dt>
               class <a href="classMech.html" class="m-doc">Mech</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>The core class representing each moving entity in the game.</dd>
           </dl>
         </section>
       </div>
