--- a/unit_8h.html
+++ b/unit_8h.html
@@ -69,7 +69,7 @@
             <dt>
               class <a href="classUnit.html" class="m-doc">Unit</a>
             </dt>
-            <dd><span></span></dd>
+            <dd>The standart groups of Mechs.</dd>
           </dl>
         </section>
       </div>
