deploy: 53c6621a0cd32f3e0be719f4b2cdc719c0444082

--- a/annotated.html
+++ b/annotated.html
@@ -72,7 +72,7 @@
           <li>class <a href="classMeltingPointUnit.html" class="m-doc">MeltingPointUnit</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classMyTimer.html" class="m-doc">MyTimer</a> <span class="m-doc"><span></span></span></li>
           <li>class <a href="classSpawnerWeapon.html" class="m-doc">SpawnerWeapon</a> <span class="m-doc">Cannon/Spawner weapon.</span></li>
-          <li>class <a href="classUnit.html" class="m-doc">Unit</a> <span class="m-doc">The standart groups of Mechs.</span></li>
+          <li>class <a href="classUnit.html" class="m-doc">Unit</a> <span class="m-doc">The standard groups of Mechs.</span></li>
           <li>class <a href="classWeapon.html" class="m-doc">Weapon</a> <span class="m-doc">Represents each attacking entity in the game.</span></li>
         </ul>
         <script>
