--- a/classExplosionWeapon.html
+++ b/classExplosionWeapon.html
@@ -67,7 +67,7 @@
             </li>
           </ul>
         </div>
-<p>Inherits from <a href="classWeapon.html" class="m-doc">Weapon</a>. Meant for everthing exploding like rockets, Rhinos or Arclight-bullets.</p>
+<p>Inherits from <a href="classWeapon.html" class="m-doc">Weapon</a>. Meant for everything exploding like rockets, Rhinos or Arclight-bullets.</p>
         <section id="base-classes">
           <h2><a href="#base-classes">Base classes</a></h2>
           <dl class="m-doc">
