--- a/classUnit.html
+++ b/classUnit.html
@@ -52,7 +52,7 @@
           Unit <span class="m-thin">class</span>
           <div class="m-doc-include m-code m-inverted m-text-right"><span class="cp">#include</span> <a class="cpf" href="unit_8h.html">&lt;unit.h&gt;</a></div>
         </h1>
-        <p>The standart groups of Mechs.</p>
+        <p>The standard groups of Mechs.</p>
         <div class="m-block m-default">
           <h3>Contents</h3>
           <ul>
