--- a/classCrawlerUnit.html
+++ b/classCrawlerUnit.html
@@ -72,7 +72,7 @@
             <dt>
               class <a href="classUnit.html" class="m-doc">Unit</a>
             </dt>
-            <dd>The standart groups of Mechs.</dd>
+            <dd>The standard groups of Mechs.</dd>
           </dl>
         </section>
         <section id="typeless-methods">
